<resources>
    <string name="app_name" translatable="false">My Videogame Collection</string>
    <string name="registration_text">Account registration</string>
    <string name="notifications">Notifications</string>
    <string name="app_name_short" translatable="false">MyVC</string>
    <string name="profile_menu">Profile</string>
    <string name="search_menu">Search</string>
    <string name="library_menu">Library</string>
    <string name="score_field">Score: </string>
    <string name="no_Score" translatable="false">N/A</string>
    <string name="sort_search">Sort by…</string>
    <string name="filter_search">Filter by…</string>
    <string name="menu_option1">Score</string>
    <string name="menu_option3">Name</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_accept">Accept</string>
    <string name="filter_option1">Score: Positive</string>
    <string name="filter_option2">Score: Negative</string>
    <string name="add_button">Add</string>
    <string name="remove">Remove</string>
    <string name="logout_button">Log out</string>
    <string name="login_button">Log in</string>
    <string name="register_button">Register</string>
    <string name="completed_status">Completed</string>
    <string name="playing_status">Playing</string>
    <string name="dropped_status">Dropped</string>
    <string name="on_hold_status">On Hold</string>
    <string name="plan_to_play_status">Plan to play</string>
    <string name="not_added_status">Not added</string>
    <string name="library_status">Library Status</string>
    <string name="social">Social</string>
    <string name="friends_card">Friends</string>
    <string name="username_login">Username</string>
    <string name="password_login">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create account</string>
    <string name="err_invalid_credentials">Incorrect email or password</string>
    <string name="err_short_pass">Password too short</string>
    <string name="err_different_passwords">Passwords are not the same</string>
    <string name="err_invalid_email">Email is not valid</string>
    <string name="err_empty_fields">All the fields must be filled</string>
    <string name="err_register">There was an error creating the account</string>
    <string name="err_unknown_restart_opt">An error has occurred, please restart the app and try again</string>
    <string name="supabase_url_rest" translatable="false">https://hdwsktohrhulukpzmike.supabase.co/rest/v1</string>
    <string name="supabase_url_auth" translatable="false">https://hdwsktohrhulukpzmike.supabase.co/auth/v1</string>
    <string name="supabase_url_images" translatable="false">https://hdwsktohrhulukpzmike.supabase.co/storage/v1/object/list/avatars</string>
    <string name="supabase_url_view_image" translatable="false">https://hdwsktohrhulukpzmike.supabase.co/storage/v1/object/public/avatars/default/</string>
    <string name="friend_search">Search for friends</string>
    <string name="edit_profile">Edit profile</string>
    <string name="country_label">Select a country</string>
    <string name="save_edit">Save changes</string>
    <string name="description">Description</string>
    <string name="warn_username_not_filled">Username not valid</string>
    <string name="add_friend">Add friend</string>
    <string name="remove_friend">Unfriend</string>
    <string name="err_long_user">Username too long</string>
    <string name="new_notification" translatable="false">(*)</string>
    <string name="status_text">Modify status...</string>
    <string name="confirmation_title">Confirmation</string>
    <string name="check_user">See user</string>
    <string name="cancel_friendship">No</string>
    <string name="accept_friendship">Yes</string>
    <string name="friendship_message">Are you sure you want to add </string>
    <string name="quote" translatable="false">?</string>
</resources>