<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/editProfile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:text="@string/edit_profile"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/editProfile_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editProfile_title"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/username_login"
        android:maxLines="1"
        android:maxLength="15"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:importantForAutofill="no" />

    <AutoCompleteTextView
        android:id="@+id/editProfile_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editProfile_username"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/country_label"
        android:maxLines="1"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:completionThreshold="1"/>

    <EditText
        android:id="@+id/editProfile_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editProfile_country"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/editProfile_save"
        android:layout_width="match_parent"
        android:text="@string/save_edit"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editProfile_description"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="80dp" />

</RelativeLayout>