<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/tools"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileFragment">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/profile_pic"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="255dp"
            android:src="@drawable/beluga"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_oval="true" />

        <TextView
            android:id="@+id/username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="37dp"
            android:text="Beluga1442"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/profile_pic"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userLocation_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:text="Germany"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/profile_pic"
            app:layout_constraintTop_toBottomOf="@+id/username_text" />

        <TextView
            android:id="@+id/userDescription_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:justificationMode="inter_word"
            android:text="@string/pruebaxD"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/profile_pic"
            app:layout_constraintTop_toBottomOf="@+id/userLocation_text" />

        <androidx.cardview.widget.CardView
            android:id="@+id/games_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_pic"
            card_view:cardCornerRadius="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/library_status"
                android:textSize="17sp"
                android:textStyle="bold">
            </TextView>

            <androidx.cardview.widget.CardView
                android:id="@+id/completedGamesCard"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="50dp"
                android:layout_marginTop="60dp"
                android:padding="10dp"
                app:cardBackgroundColor="@color/blue_background"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/completed_status"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp">

                </TextView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="30dp"
                    android:src="@drawable/ic_profile">

                </ImageView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/playingGamesCard"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="50dp"
                android:padding="10dp"
                app:cardBackgroundColor="@color/green_status"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/playing_status"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="30dp"
                    android:src="@drawable/ic_profile">

                </ImageView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/droppedGamesCard"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="50dp"
                android:layout_marginTop="180dp"
                android:padding="10dp"
                app:cardBackgroundColor="@color/red_status"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/dropped_status"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp">

                </TextView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="30dp"
                    android:src="@drawable/ic_profile">

                </ImageView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/onHoldGamesCard"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="180dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                app:cardBackgroundColor="@color/yellow_status"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/on_hold_status"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="30dp"
                    android:src="@drawable/ic_profile">

                </ImageView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/planToPlayGamesCard"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="300dp"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                app:cardBackgroundColor="@color/recycler_background"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/plan_to_play_status"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="30dp"
                    android:src="@drawable/ic_profile">

                </ImageView>

            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/games_dashboard"
            card_view:cardCornerRadius="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/social"
                android:textSize="17sp"
                android:textStyle="bold">

            </TextView>

            <androidx.cardview.widget.CardView
                android:id="@+id/reviewsCard"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="50dp"
                android:layout_marginTop="60dp"
                android:padding="10dp"
                app:cardBackgroundColor="@color/blue_background"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/review_card"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp">

                </TextView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="30dp"
                    android:src="@drawable/ic_profile">

                </ImageView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="50dp"
                android:padding="10dp"
                app:cardBackgroundColor="@color/green_status"
                app:cardCornerRadius="15dp"
                android:layout_marginBottom="20dp"
                app:cardElevation="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/friends_card"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="30dp"
                    android:src="@drawable/ic_profile">

                </ImageView>

            </androidx.cardview.widget.CardView>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>